# -embedded_systems

./: README.md  shell.nix
.direnv/: nix-profile-24.11-riqkpszjqk02bi1w  nix-profile-24.11-riqkpszjqk02bi1w.rc
ue01/v1/: 12_bit_adder.dig  16_bit_adder.dig  16_bit_dig_disply_tester.dig  16_bit_div_by_10.dig  16_bit_hex_to_BCD.dig  16_bit_higher_than_9.dig  16_bit_multiplexer.dig  16_bit_to_6_7_sec_connector.dig  16_bit_to_BCD.dig  1_bit_multiplexer.dig  1_to_12.dig  1_to_4.dig  1_to_8.dig  2_bit_decoder.dig  2_bit_decoder_tester.dig  2_bit_multiplexer.dig  3_bit_carry_ripple_adder.dig  3_bit_decoder.dig  3_bit_decoder_and_lower.dig  3_bit_decoder_tester.dig  3_bit_multiplexer.dig  3_bit_setter.dig  4_bit_carry_ripple_adder.dig  4_bit_carry_select_adder.dig  4_bit_decoder.dig  4_bit_decoder_and_lower.dig  4_bit_decoder_tester.dig  4_bit_equal_0.dig  4_bit_higher_than_9.dig  4_bit_max_9.dig  4_bit_multiplexer.dig  5_bit_carry_select_adder.dig  7_bit_multiplexer.dig  7_sec_to_connector.dig  8_bit_3_bit_multiplexer.dig  8_bit_4_value_setter.dig  8_bit_adder.dig  8_bit_alu.dig  8_bit_multiplexer.dig  8_bit_to_4_7_sec_connector.dig  (+15 more)
ue01/v2/: 16_bit_adder.dig  16_bit_hex_to_BCD.dig  16_bit_multiplexer.dig  (+39 more)
ueb02/: risc-v-toolchain-fix.sh
ueb02/tiny-riscv-exercise/iss/: CMakeLists.txt  Makefile  bit_range.h  bus.cpp  bus.h  iss.cpp  iss.h  main.cpp  memory.hpp  opcodes.h  peripheral.cpp  peripheral.hpp  recompile.sh  register.cpp  register.hpp  shell.nix
ueb02/tiny-riscv-exercise/iss/.direnv/: nix-profile-24.11-riqkpszjqk02bi1w  nix-profile-24.11-riqkpszjqk02bi1w.rc
(+27 files in other folders)
